# aranda

./: .gitignore  HANDOFF.md  README.md  flake.nix  pyproject.toml  wrangler.jsonc
data/: PAGE_MAP.md
data/extracted/: pueblo-001.json  pueblo-002.json  pueblo-003.json  pueblo-004.json  pueblo-005.json  pueblo-006.json  pueblo-007.json  pueblo-008.json  pueblo-009.json  pueblo-010.json  pueblo-011.json  pueblo-012.json  pueblo-013.json  pueblo-014.json  pueblo-015.json  pueblo-016.json  pueblo-017.json  pueblo-018.json  pueblo-019.json  pueblo-020.json  pueblo-021.json  pueblo-022.json  pueblo-023.json  pueblo-024.json  pueblo-025.json  pueblo-026.json  pueblo-027.json  pueblo-028.json  pueblo-029.json  pueblo-030.json  pueblo-031.json  pueblo-032.json  pueblo-033.json  pueblo-034.json  pueblo-035.json  pueblo-036.json  pueblo-037.json  pueblo-038.json  pueblo-039.json  pueblo-040.json  (+15 more)
data/extracted/_pilot_manual/: pueblo-001.json  pueblo-002.json  pueblo-003.json  pueblo-004.json  pueblo-005.json
data/geo/: mallorca_municipis.json
data/ibestat/: I101001_7601_ca.xls  I101001_7602_ca.xls  SOURCE.md
prompts/: extract_pueblo.md
review/: index.html
scripts/: clean_leftovers.py  crop_page.py  crosscheck.py  export_web_data.py  extract_pages.py  extract_vision.py  fetch_sources.py  fix_deia.py  ibestat_apply.py  ibestat_crosscheck.py  normalize.py  prose_review.py  refine_age_cells.py  strip_prose.py  verify_totals.py
web/: _headers  app.js  data.json  index.html  style.css
